--- a/hundroidschool/index.html
+++ b/hundroidschool/index.html
@@ -1,6 +1,14 @@
 <html>
     <head>
-    <script src="mySketch.js" type="text/javascript"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js" type="text/javascript"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.min.js" type="text/javascript"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js" type="text/javascript"></script>
+    <script src="mySketch.js" type="text/javascript"></script>
+    <script language="javascript" type="text/javascript" src="js/vendor/p5.js"></script>
+    <script language="javascript" src="js/vendor/p5.dom.js"></script>
+    <script language="javascript" src="js/vendor/p5.sound.js"></script>
+    <!--
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js" type="text/javascript"></script>
+    -->
     </head>
 <body>
 </body>
