--- a/hundroidapp/p5bp/index.html
+++ b/hundroidapp/p5bp/index.html
@@ -15,10 +15,11 @@
     <body>
         <p>put your HTML here</p>
 
+        <!-- https://www.openprocessing.org/sketch/x432511 -->
         <script language="javascript" type="text/javascript" src="js/vendor/p5.js"></script>
         <!--<script language="javascript" src="js/vendor/p5.dom.js"></script>-->
         <!--<script language="javascript" src="js/vendor/p5.sound.js"></script>-->
 
-        <script src="js/main.js"></script>
+        <script src="mySketch.js"></script>
     </body>
 </html>
