--- a/hundroidapp/frozenbrush/index.html
+++ b/hundroidapp/frozenbrush/index.html
@@ -3,6 +3,7 @@
     <script src="mySketch.js" type="text/javascript"></script>
     <script src="Delaunay.js" type="text/javascript"></script>
     <script language="javascript" type="text/javascript" src="js/vendor/p5.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <!-- <script language="javascript" src="js/vendor/p5.dom.js"></script>
     <script language="javascript" src="js/vendor/p5.sound.js"></script> -->
     <!--
