--- a/hundroidapp/hundroidschool/index.html
+++ b/hundroidapp/hundroidschool/index.html
@@ -3,7 +3,7 @@
     <script src="mySketch.js" type="text/javascript"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>your boilerplate project</title>
+    <title>Hundroid School</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#212121" />
