--- a/hundroidapp/index.html
+++ b/hundroidapp/index.html
@@ -8,7 +8,12 @@
 		<META HTTP-EQUIV="Cache-Control" CONTENT="no-cache">
 		<META HTTP-EQUIV="Cache-Control" CONTENT="must-revalidate">
 		<META HTTP-EQUIV="Pragma" CONTENT="no-cache">
-        <title>Palinka Lounge Hundroid App</title>
+		<title>Palinka Lounge Hundroid App</title>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="description" content="">
+		<!-- meta name="viewport" content="width=device-width, initial-scale=1"> -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
 		<link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png" />
@@ -19,10 +24,12 @@
 		<link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-144x144.png" />
 		<link rel="apple-touch-icon" sizes="152x152" href="/img/apple-touch-icon-152x152.png" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon-180x180.png" />
+		<link rel="stylesheet" href="css/ios.css">
 		<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
 		<script src="js/idb.filesystem.min.js" type="text/javascript"></script>
 		<script src="js/config.js" type="text/javascript"></script>
 		<script src="js/tinytib.js" type="text/javascript"></script>
+		<script src="js/inobounce.js" type="text/javascript"></script>
         <!-- <script type="text/javascript" src="https://getfirebug.com/firebug-lite-beta.js"></script> -->
         <script language="JavaScript" type="text/javascript">
         // Try to avoid frame busting
@@ -31,6 +38,14 @@
         </script> 
 	</head>
 	<body>
+			<style>
+					ul {
+						height: 115px;
+						border: 1px solid gray;
+						overflow: auto;
+						-webkit-overflow-scrolling: touch;
+					}
+				</style>
 		<div id="status">
 			<p><span id="timestamp"></span><span id="errors"></span><span id="config"></span></p>
 		</div>
@@ -39,7 +54,19 @@
 		<div id="controls"><input type="button" name="halt" id="halt" value="Halt" /><input type="button" name="logdump" id="logdump" value="Log Dump" /><input type="button" name="resetlog" id="resetlog" value="Reset Log" /><input type="button" name="clear" id="clear" value="Clear" /><input type="button" name="wakeup" id="wakeup" value="Wakeup" /></div>
 		<br />
 		<div id="logoutput"></div>
-		<IFRAME id="displaywindow" target="_blank" WIDTH="100%" HEIGHT="100%" scrolling="no" style="  overflow: hidden;">
+		<!-- <IFRAME id="displaywindow" target="_blank" WIDTH="100%" HEIGHT="100%" scrolling="no" style="  overflow: hidden;"> -->
+		<!--
+		<IFRAME id="displaywindow" target="_blank" height="950" width="100%" scrolling="no">
+			If you can see this, your browser doesn't 
+			understand IFRAME.  Please contact your supervisor.
+		</IFRAME>
+		-->
+		<!--
+		<div style="overflow: scroll; -webkit-overflow-scrolling: touch; width: 300px;">
+				<iframe id="displaywindow" style="width: 600px;"></iframe>
+		</div>
+		-->
+		<IFRAME id="displaywindow" target="_blank" height="950" width="100%" scrolling="no">
 			If you can see this, your browser doesn't 
 			understand IFRAME.  Please contact your supervisor.
 		</IFRAME>
