--- a/hundroidapp/vanishingtext/index.html
+++ b/hundroidapp/vanishingtext/index.html
@@ -1,8 +1,7 @@
 <html>
     <head>
     <script src="mySketch.js" type="text/javascript"></script>
-    <script src="FlowField.js" type="text/javascript"></script>
-    <script src="PaintBrush.js" type="text/javascript"></script>
+    <script src="Vehicle.js" type="text/javascript"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>your boilerplate project</title>
